Process feedback Fix word break in titles - remove break word prop in css Fix email break - increase column size. Update copyright disclaimer in footer - Replace with translation Update buttons/links to open in new tab

--- a/src/components/Heading/Heading.css
+++ b/src/components/Heading/Heading.css
@@ -1,6 +1,5 @@
 .heading {
   margin: 0;
-  overflow-wrap: break-word;
 }
 
 .heading--1 {
